--- a/cssprincipal/cssprincipal.css
+++ b/cssprincipal/cssprincipal.css
@@ -1,45 +1,44 @@
 
+
+
 body {
     font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
     margin: 0;
     padding: 0;
 }
 
 h1 {
     text-align: center;
-    color: #4CAF50;
-    margin-top: 50px;
+    color: #333;
+    margin-top: 20px;
 }
 
 ul {
-    list-style-type: square; /* Cambia los puntos por cuadrados en la lista */
-    margin: 20px auto;
+    
+    text-align: center;
     padding: 0;
-    max-width: 600px;
 }
 
 li {
-    background-color: #fff;
     margin: 10px 0;
-    padding: 15px;
-    border-radius: 5px;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    transition: background-color 0.3s ease;
-}
-
-li:hover {
-    background-color: #e0f7e0; /* Color al pasar el ratón */
 }
 
 a {
     text-decoration: none;
-    color: #333;
+    color: #4CAF50;
+    font-size: 18px;
     font-weight: bold;
-    transition: color 0.3s ease;
 }
 
 a:hover {
-    color: #4CAF50; /* Cambia el color del enlace al pasar el ratón */
+    color: #333; 
 }
+
+.imagen-ancho-completo {
+    width: 100%;
+    height: auto; 
+    display: block;
+    margin-top: 20px;
+}
+
+
