--- a/cssprincipal/cssprincipal.css
+++ b/cssprincipal/cssprincipal.css
@@ -11,28 +11,46 @@ h1 {
     text-align: center;
     color: #333;
     margin-top: 20px;
+    font-size: 2em;
 }
-
-ul {
-    
-    text-align: center;
+.actividad-lista {
+    display: flex;
+    flex-direction: column; 
+    align-items: center; 
+    gap: 10px; 
+    list-style-type: none; 
     padding: 0;
+    margin: 20px 0;
+}
+.actividad-lista li {
+    width: 80%; 
+    max-width: 600px; 
+    text-align: center;
+    background-color: #ffffff;
+    box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+    transition: transform 0.2s ease, box-shadow 0.2s ease;
 }
 
-li {
-    margin: 10px 0;
+.actividad-lista li:hover {
+    transform: scale(1.2);
+    background-color: #4CAF50;
+    box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.15);
 }
 
-a {
+.actividad-lista a {
+    display: block;
     text-decoration: none;
-    color: #4CAF50;
-    font-size: 18px;
+    color: #4CAF50; 
+    font-size: 1.1em;
+    padding: 15px 10px;
     font-weight: bold;
 }
 
-a:hover {
-    color: #333; 
+.actividad-lista a:hover {
+    color: #ffffff; 
 }
+
+
 
 .imagen-ancho-completo {
     width: 100%;
